# stellar-hackathon

./: .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  Makefile  README.md  package.json  tsconfig.base.json
.claude/rules/: design-system.md
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/src/: lib.rs
contracts/contracts/komunify/: Cargo.toml
contracts/contracts/komunify/src/: lib.rs  test.rs
contracts/contracts/komunify/test_snapshots/test/: claim_pays_out.1.json  constructor_rejects_bad_split.1.json  rounding_dust_goes_to_platform.1.json  subscribe_below_minimum_fails.1.json  subscribe_splits_70_20_10.1.json  t01_even_split_two_single_manager_contents.1.json  t02_indivisible_budget_remainder_to_dust.1.json  t03_two_managers_odd_per_content.1.json  t04_double_settle_errors.1.json  t05_settle_current_epoch_errors.1.json  t06_record_access_idempotent.1.json  t07_record_access_expired_sub.1.json  t10_conservation.1.json  (+5 more)
contracts/contracts/notes/src/: lib.rs  test.rs
contracts/contracts/usdc/: Cargo.toml
contracts/contracts/usdc/src/: lib.rs  test.rs
docs/: API_SPEC.md  CONTRACT_SPEC.md  DECISIONS.md  PLAN.md  PROGRESS.md
prototype/: app.js  benefits.html  content.html  dashboard.html  index.html  partner.html  styles.css  subscribe.html  traction.html
prototype/landing/: 404.html  dashboard.html  dashboard.txt  explore.html  explore.txt  index.html  index.txt  start.html  start.txt
prototype/landing/community/: demo.html  demo.txt
public/: docs.html
scripts/: seed-gate-test.ts  seed.ts  verify-upload-download.ts
src/: App.css
(+45 files in other folders)
