# Built inside the soroban.studio scaffold (Build on Stellar Bootcamp Bandung).
# If the soroban-sdk version in your studio project differs, match that version here.

[package]
name = "communify-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23"

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
